feat(reservations): 일반 기승 완료 처리를 구현
